# merkuro-github-fork

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  BUILD_INSTRUCTIONS.txt  CMakeLists.core.txt  CMakeLists.standalone.txt  CMakeLists.txt  COMPILATION_STATUS.md  DETAILED_MILESTONE_PLAN.md  IMPLEMENTATION_GUIDE.md  PHASE_0_3_COMPLETE.md  README.md  REFACTORING_FEASIBILITY_REVIEW.md  SESSION_FINAL_STATUS.md  flake.nix  org.kde.kalendar.appdata.xml  org.kde.kalendar.desktop
.gitlab/merge_request_templates/: template.md  template.md.license
.reuse/: dep5
autotests/: CMakeLists.txt  calutilstest.cpp  incidenceoccurrencemodeltest.cpp
autotests/unittestenv/xdglocal/: std0.ics
cmake/modules/: add_gpg_crypto_test.cmake
docs/analysis/: architecture-analysis.md
docs/guides/: build-instructions.md  quick-start.md
docs/planning/: project-status.md
docs/reports/: phase-2-status.md  phase-4-complete.md  phase-5-complete.md  phase-5b-complete.md  qt6-migration-complete.md  session-final-status.md
flatpak/: update-cargo-modules.sh
kalendarac/: CMakeLists.txt  alarmdockwindow.cpp  alarmdockwindow.h  alarmnotification.cpp  alarmnotification.h  kalendarac.notifyrc  kalendaracmain.cpp  kalendaralarmclient.cpp  kalendaralarmclient.h  notificationhandler.cpp  org.kde.calendar.Calendar.xml  org.kde.kalendarac.desktop  org.kde.kalendarac.service.in  org.kde.kalendarac.xml
src/: CMakeLists.txt  agentconfiguration.cpp  attachmentsmodel.cpp  attachmentsmodel.h  attendeesmodel.cpp  attendeesmodel.h  calendarmanager.cpp  calendarmanager.h  contactcontroller.cpp  contactsmanager.cpp  contactsmanager.h  dailyeventsmodel.cpp  dailyeventsmodel.h  eventoccurrencemodel.cpp  eventoccurrencemodel.h  eventwrapper.cpp  eventwrapper.h  extratodomodel.cpp  extratodomodel.h  filter.h  hourlyincidencemodel.cpp  hourlyincidencemodel.h  incidenceoccurrencemodel.cpp  incidenceoccurrencemodel.h  incidencetreemodel.cpp  incidencewrapper.cpp  incidencewrapper.h  infinitecalendarviewmodel.cpp  infinitecalendarviewmodel.h  kalendar_part.cpp  kalendarapplication.cpp  kalendarapplication.h  kalendarconfig.kcfg  main.cpp  monthmodel.cpp  monthviewmodel.cpp  monthviewmodel.h  mousetracker.cpp  multidayeventmodel.cpp  multidayeventmodel.h  (+18 more)
src/app/: CMakeLists.txt  CalendarApp.cpp  CalendarApp.h  main.cpp  resources.qrc
src/app/models/: EventsModel.cpp  EventsModel.h  MonthModel.cpp  MonthModel.h
src/app/qml/: CalendarManagerDialog.qml  EventEditorDialog.qml  main.qml
src/backends/akonadi/: AkonadiCalendarBackend.cpp  AkonadiCalendarBackend.h  AkonadiDataConverter.cpp  AkonadiDataConverter.h  CMakeLists.txt
src/backends/local/: CMakeLists.txt  DirectoryBackend.cpp  DirectoryBackend.h  ICSFileBackend.cpp  ICSFileBackend.h
src/calendar/: CMakeLists.txt  accountsmodel.cpp  accountsmodel.h  availabilitywrapper.cpp  availabilitywrapper.h  calendarapplication.cpp  calendarapplication.h  calendarconfig.kcfg  calendarmanager.cpp  calendarmanager.h  calendarplugin.cpp  incidencewrapper.cpp  incidencewrapper.h  main.cpp  org.kde.kalendar.calendar.desktop  org.kde.merkuro.calendar.desktop  resources.qrc  utils.h
src/calendar/autotests/: CMakeLists.txt  incidenceoccurrencemodeltest.cpp  infinitemerkurocalendarviewmodeltest.cpp
src/calendar/freebusy/: freebusycalendar.cpp  freebusycalendar.h  freeperiodmodel.h
src/calendar/models/: holidaymodel.cpp  holidaymodel.h  hourlyincidencemodel.cpp  hourlyincidencemodel.h  (+4 more)
src/components/: CMakeLists.txt
src/contacts/: CMakeLists.txt  addresseewrapper.cpp  addresseewrapper.h  addressmodel.cpp  addressmodel.h  avatarimageprovider.cpp  avatarimageprovider.h  collectionmodel.cpp  collectionmodel.h  contactapplication.h  contacteditorbackend.cpp  contacteditorbackend.h  contactgroupeditor.cpp  contactgroupmodel.cpp  contactgroupmodel.h  contactgroupwrapper.cpp  contactgroupwrapper.h  contactmanager.cpp  contactmanager.h  contactplugin.cpp  contactsmanager.cpp  contactsmanager.h  contactsmodel.cpp  contactsmodel.h  globalcontactmodel.cpp  imppmodel.cpp  imppmodel.h
src/core/: CMakeLists.txt  ServiceContainer.cpp  ServiceContainer.h
src/core/data/: ICalendarStorage.h
src/core/models/: CalendarEvent.cpp  CalendarEvent.h  TodoItem.cpp  TodoItem.h
src/core/operations/: EventOperations.cpp  EventOperations.h
src/core/utils/: DateTimeUtils.cpp  DateTimeUtils.h  RecurrenceCalculator.cpp  RecurrenceCalculator.h
src/launcher/: CMakeLists.txt  org.kde.merkuro.desktop
src/lib/: CMakeLists.txt  abstractapplication.cpp  abstractapplication.h  colorproxymodel.cpp  colorproxymodel.h
src/mail/: CMakeLists.txt  contactimageprovider.cpp  contactimageprovider.h  crypto.cpp  mailapplication.cpp  mailapplication.h  mailkernel.cpp  mailkernel.h  mailmanager.cpp  mailmanager.h  mailmodel.cpp  mailmodel.h  mailplugin.cpp  main.cpp  messagestatus.cpp  messagestatus.h  org.kde.merkuro.mail.desktop  threadedmailmodel.h
src/mail/rs/sanitization/: Cargo.toml  build.rs
src/mail/rs/sanitization/src/: lib.rs  sanitization.rs
src/models/: colorproxymodel.cpp  colorproxymodel.h  hourlyincidencemodel.cpp  hourlyincidencemodel.h  incidenceoccurrencemodel.cpp  incidenceoccurrencemodel.h  infinitecalendarviewmodel.cpp  itemtagsmodel.cpp  itemtagsmodel.h  multidayincidencemodel.cpp  remindersmodel.h  todosortfilterproxymodel.cpp  todosortfilterproxymodel.h
src/quick/: CMakeLists.txt  agentconfiguration.cpp  akonadiquickplugin.cpp  attributefactory.cpp  attributefactory.h  collectioncomboboxmodel.cpp  collectioncomboboxmodel.h  collectioneditorcontroller.cpp  collectioneditorcontroller.h  identitymodel.cpp  identitymodel.h  identityutils.cpp  identityutils.h  progressmodel.cpp  progressmodel.h
tests/: CMakeLists.txt
tests/unit/: CalendarEventTest.cpp  DirectoryBackendTest.cpp  ICSFileBackendTest.cpp  RecurrenceAndDateTimeTest.cpp  ServiceContainerTest.cpp  TodoItemTest.cpp
verify-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
verify-build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  core-unit-tests  local-backend-tests
(+207 files in other folders)
