[package]
name = "sanitization-ffi"
version = "0.1.0"
authors = ["Carl Schwan <carlschwan@kde.org>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cxx-build = "1.0.28"

[dependencies]
cxx = "1.0"
ammonia = "3.2.0"
maplit = "1.0.2"
html2text = "0.4.2"

